feat: open mechanical table custom menu